[OPIK-2770] [BE] Add optimization log sync service with Redis to S3 streaming
- Add OptimizationLogSyncService for syncing logs from Redis to S3
- Use Flux.interval() with Managed lifecycle (no Quartz dependency)
- Implement per-optimization distributed locking to prevent duplicates
- Gzip compress logs before S3 upload
- S3 key pattern: logs/optimization-studio/{workspace_id}/{id}.log.gz
- Use KeysScanOptions for Redis key scanning (non-deprecated API)
- Add syncConcurrency config for parallel S3 uploads
- Trigger final sync on optimization completion via finalizeLogsOnCompletion
- Reduce Redis TTL to 1 hour after completion for cleanup

Demo: https://grid-comet-ml.enterprise.slack.com/files/U06VAFE2L8J/F0A54BNP34M/screenshare_-_2025-12-23_10_49_10_am.mp4

--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -419,6 +419,21 @@ onlineScoring:
       pendingMessageDuration: ${REDIS_SCORING_SPAN_USER_DEFINED_METRIC_PYTHON_PENDING_MESSAGE_DURATION:-}
       maxRetries: ${REDIS_SCORING_SPAN_USER_DEFINED_METRIC_PYTHON_MAX_RETRIES:-}
 
+# Configuration for Optimization Studio logs synchronization
+optimizationLogs:
+  # Default: true
+  # Description: Whether log synchronization from Redis to S3 is enabled
+  enabled: ${OPTIMIZATION_LOGS_ENABLED:-true}
+  # Default: 2m
+  # Description: Interval between log sync runs
+  syncInterval: ${OPTIMIZATION_LOGS_SYNC_INTERVAL:-2m}
+  # Default: 30s
+  # Description: Lock timeout for per-optimization distributed lock during sync
+  lockTimeout: ${OPTIMIZATION_LOGS_LOCK_TIMEOUT:-30s}
+  # Default: 5
+  # Description: Maximum number of concurrent S3 uploads during sync
+  syncConcurrency: ${OPTIMIZATION_LOGS_SYNC_CONCURRENCY:-5}
+
 # LLM providers client configuration
 llmProviderClient:
   # Default: 3
