--- a/apps/opik-frontend/package.json
+++ b/apps/opik-frontend/package.json
@@ -107,6 +107,7 @@
     "react18-json-view": "^0.2.8",
     "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
