--- a/deployment/helm_chart/opik/templates/chart-pre-upgrade-migration-job.yaml
+++ b/deployment/helm_chart/opik/templates/chart-pre-upgrade-migration-job.yaml
@@ -85,7 +85,6 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
     {{- end }}
 spec:
-  ttlSecondsAfterFinished: 7200  # Keep for 2 hours
   backoffLimit: 2
   template:
     metadata:
@@ -106,7 +105,7 @@ spec:
         - name: migration
           image: {{ .Values.chartMigration.image }}
           command:
-            - /bin/bash
+            - /bin/sh
             - -c
             - |
               set -e
@@ -115,58 +114,68 @@ spec:
               NAMESPACE="{{ .Release.Namespace }}"
               BACKEND_DEPLOYMENT="{{ include "opik.name" . }}-backend"
               
+              # Track if any Bitnami components were removed
+              COMPONENTS_REMOVED=0
+              
               echo ""
               
               {{- if .Values.mysql.enabled }}
-              # Delete MySQL StatefulSet (if exists)
+              # Delete MySQL StatefulSet (if exists and uses Bitnami image)
               MYSQL_STS="{{ .Values.mysql.fullnameOverride | default "opik-mysql" }}"
               echo "Checking MySQL StatefulSet: $MYSQL_STS"
-              if kubectl get statefulset $MYSQL_STS -n $NAMESPACE 2>/dev/null; then
-                echo "Deleting MySQL StatefulSet: $MYSQL_STS"
+              if kubectl get statefulset $MYSQL_STS -n $NAMESPACE -o yaml 2>/dev/null | grep -q "bitnami"; then
+                echo "MySQL StatefulSet $MYSQL_STS is using Bitnami image, deleting..."
                 kubectl delete statefulset $MYSQL_STS -n $NAMESPACE --wait=true
                 echo "MySQL StatefulSet $MYSQL_STS deleted (PVCs are preserved)"
+                COMPONENTS_REMOVED=$((COMPONENTS_REMOVED + 1))
               else
-                echo "MySQL StatefulSet $MYSQL_STS not found, skipping"
+                echo "MySQL StatefulSet $MYSQL_STS not found or not using Bitnami image, skipping"
               fi
               echo ""
               {{- end }}
               
               {{- if .Values.zookeeper.enabled }}
-              # Delete Zookeeper StatefulSet (if exists)
+              # Delete Zookeeper StatefulSet (if exists and uses Bitnami image)
               ZOOKEEPER_STS="{{ .Values.zookeeper.fullnameOverride | default "opik-zookeeper" }}"
               echo "Checking Zookeeper StatefulSet: $ZOOKEEPER_STS"
-              if kubectl get statefulset $ZOOKEEPER_STS -n $NAMESPACE 2>/dev/null; then
-                echo "Deleting Zookeeper StatefulSet: $ZOOKEEPER_STS"
+              if kubectl get statefulset $ZOOKEEPER_STS -n $NAMESPACE -o yaml 2>/dev/null | grep -q "bitnami"; then
+                echo "Zookeeper StatefulSet $ZOOKEEPER_STS is using Bitnami image, deleting..."
                 kubectl delete statefulset $ZOOKEEPER_STS -n $NAMESPACE --wait=true
                 echo "Zookeeper StatefulSet $ZOOKEEPER_STS deleted (PVCs are preserved)"
+                COMPONENTS_REMOVED=$((COMPONENTS_REMOVED + 1))
               else
-                echo "Zookeeper StatefulSet $ZOOKEEPER_STS not found, skipping"
+                echo "Zookeeper StatefulSet $ZOOKEEPER_STS not found or not using Bitnami image, skipping"
               fi
               echo ""
               {{- end }}
               
               {{- if .Values.redis.enabled }}
-              # Delete Redis StatefulSet (if exists)
+              # Delete Redis StatefulSet (if exists and uses Bitnami image)
               REDIS_STS="{{ .Values.redis.fullnameOverride | default "opik-redis-master" }}"
               echo "Checking Redis StatefulSet: $REDIS_STS"
-              if kubectl get statefulset $REDIS_STS -n $NAMESPACE 2>/dev/null; then
-                echo "Deleting Redis StatefulSet: $REDIS_STS"
+              if kubectl get statefulset $REDIS_STS -n $NAMESPACE -o yaml 2>/dev/null | grep -q "bitnami"; then
+                echo "Redis StatefulSet $REDIS_STS is using Bitnami image, deleting..."
                 kubectl delete statefulset $REDIS_STS -n $NAMESPACE --wait=true
                 echo "Redis StatefulSet $REDIS_STS deleted (PVCs are preserved)"
+                COMPONENTS_REMOVED=$((COMPONENTS_REMOVED + 1))
               else
-                echo "Redis StatefulSet $REDIS_STS not found, skipping"
+                echo "Redis StatefulSet $REDIS_STS not found or not using Bitnami image, skipping"
               fi
               echo ""
               {{- end }}
               
-              # Delete opik-backend deployment
+              # Delete opik-backend deployment only if at least one Bitnami component was removed
               echo "Checking backend deployment: $BACKEND_DEPLOYMENT"
-              if kubectl get deployment $BACKEND_DEPLOYMENT -n $NAMESPACE 2>/dev/null; then
-                echo "Deleting backend deployment: $BACKEND_DEPLOYMENT"
-                kubectl delete deployment $BACKEND_DEPLOYMENT -n $NAMESPACE --wait=true
-                echo "Backend deployment $BACKEND_DEPLOYMENT deleted"
+              if [ $COMPONENTS_REMOVED -gt 0 ]; then
+                if kubectl get deployment $BACKEND_DEPLOYMENT -n $NAMESPACE 2>/dev/null; then
+                  echo "At least one Bitnami component was removed ($COMPONENTS_REMOVED), deleting backend deployment: $BACKEND_DEPLOYMENT"
+                  kubectl delete deployment $BACKEND_DEPLOYMENT -n $NAMESPACE --wait=true
+                  echo "Backend deployment $BACKEND_DEPLOYMENT deleted"
+                else
+                  echo "Backend deployment $BACKEND_DEPLOYMENT not found, skipping"
+                fi
               else
-                echo "Backend deployment $BACKEND_DEPLOYMENT not found, skipping"
+                echo "No Bitnami components were removed, skipping backend deployment deletion"
               fi
               echo ""
               
