--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -31,7 +31,7 @@ chartMigration:
   # Enable this for the first upgrade that includes a migration from Bitnami charts and images
   # After successful migration, set this back to false
   enabled: true
-  image: "bitnamilegacy/kubectl:1.29.11"
+  image: "alpine/kubectl:1.35.0"
   # Service account name (must have permissions to delete StatefulSets and Deployments)
   serviceAccountName: ""
   # Node selector for the migration job pod (falls back to global nodeSelector if not specified)
