[OPIK-3586] [FE] Expose app version in frontend via /version.json
This commit adds a build step to the frontend Dockerfile to generate a
`version.json` file in the distribution directory, containing the
application version. This file allows automation tools to check the
deployed version via `curl <url>/version.json`.

It also updates `docker-compose.yaml` to pass the `OPIK_VERSION` build argument to the frontend service, ensuring the version is correctly populated during local builds.

--- a/apps/opik-frontend/Dockerfile
+++ b/apps/opik-frontend/Dockerfile
@@ -21,6 +21,9 @@ ENV NODE_OPTIONS="--max-old-space-size=8192"
 ARG BUILD_MODE=production
 RUN npm run build -- --mode $BUILD_MODE
 
+# Create version.json for checking version
+RUN echo "{\"version\": \"$VITE_APP_VERSION\"}" > dist/version.json
+
 # Production stage
 # Using nginx alpine image with OpenTelemetry support
 FROM nginx:1.29.4-alpine-otel AS nginx
