feat(optimization-studio): Fix log sync and improve log rendering
- Fix Redis codec mismatch: Use StringCodec for meta map to read Python-written timestamps
- Add ansi-to-html for Rich-formatted log rendering with custom color palette
- Handle OSC 8 hyperlinks and terminal control sequences in logs
- Cache presigned URLs in frontend to reduce backend calls
- Increase terminal width to 120 chars for proper Rich panel rendering
- Log warning when skipping None env vars in subprocess execution

--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -426,7 +426,7 @@ optimizationLogs:
   enabled: ${OPTIMIZATION_LOGS_ENABLED:-true}
   # Default: 2m
   # Description: Interval between log sync runs
-  syncInterval: ${OPTIMIZATION_LOGS_SYNC_INTERVAL:-2m}
+  syncInterval: ${OPTIMIZATION_LOGS_SYNC_INTERVAL:-30s}
   # Default: 30s
   # Description: Lock timeout for per-optimization distributed lock during sync
   lockTimeout: ${OPTIMIZATION_LOGS_LOCK_TIMEOUT:-30s}
