--- a/sdks/opik_optimizer/pyproject.toml
+++ b/sdks/opik_optimizer/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
     "pytest-asyncio",
     "pytest-env",
     "pytest-profiling",
+    "huggingface-hub",
     # "google-adk",
     "langgraph",
     "pre-commit",
