--- a/sdks/opik_optimizer/pytest.ini
+++ b/sdks/opik_optimizer/pytest.ini
@@ -3,5 +3,7 @@ filterwarnings =
     ignore::UserWarning:pydantic.main
     ignore::pytest.PytestConfigWarning
     ignore::RuntimeWarning:litellm.integrations.opik.opik
+    ignore:There is no current event loop:DeprecationWarning:litellm._service_logger
+    ignore:Argument ``multivariate`` is an experimental feature.:optuna._experimental.ExperimentalWarning
 markers =
     integration: slow integration-style tests
