[NA][SDK] Optimizer 3.0rc2: Stablize 3.0rc1 fixing broken tests and mypy (#4555)
* chore: lint/mypy fixes

* fix: canidates overwriting

* chore: lint/mypy fixes

* chore: lint/mypy fixes

* chore: lint/mypy fixes

* chore: lint/mypy fixes

* fix: tests for mypy

* Update test_dataset_sources.py

* Update test_multimodal_prompt.py

* Update test_benchmark_smoke.py

* Update pyproject.toml

* Update pyproject.toml

* Update pyproject.toml

* fix: multi agent prompt support for task runner outputs

* Update pytest.ini

* Update Makefile

* fix: test failures

* chore: fix test failure

* Create conftest.py

--- a/sdks/opik_optimizer/pyproject.toml
+++ b/sdks/opik_optimizer/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opik_optimizer"
-version = "3.0.0rc1"
+version = "3.0.0rc2"
 description = "Agent optimization with Opik"
 authors = [
     {name = "Comet ML", email = "support@comet.com"}
@@ -39,6 +39,7 @@ dev = [
     "pytest-asyncio",
     "pytest-env",
     "pytest-profiling",
+    "huggingface-hub",
     # "google-adk",
     "langgraph",
     "pre-commit",
@@ -101,6 +102,8 @@ filterwarnings = [
     "ignore::UserWarning:pydantic.main",
     "ignore::pytest.PytestConfigWarning",
     "ignore::RuntimeWarning:litellm.integrations.opik.opik",
+    "ignore:There is no current event loop:DeprecationWarning:litellm._service_logger",
+    "ignore:Argument ``multivariate`` is an experimental feature.:optuna._experimental",
 ]
 
 [tool.coverage.run]
